--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://krstackblogs2.github.io/OEM-Headlights-for-01-04-Tacoma-Real-Review-and-Comparison/">https://krstackblogs2.github.io/OEM-Headlights-for-01-04-Tacoma-Real-Review-and-Comparison/</a><br>
+                <a target="_bLank" href="https://adventuremediaco.s3.us-east-005.backblazeb2.com/OEM+Headlights+for+01%E2%80%9304+Tacoma+Real+Review+and+Comparison/index.html">https://adventuremediaco.s3.us-east-005.backblazeb2.com/OEM+Headlights+for+01%E2%80%9304+Tacoma+Real+Review+and+Comparison/index.html</a><br>
+                <a target="_bLank" href="https://sensational-bienenstitch-5a63d2.netlify.app/">https://sensational-bienenstitch-5a63d2.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
